--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p>43 990₽</p>
             </div>
             <div class="product-item">
-                <img src="Pumki.png" alt="Бутсы Ultra 5 Ultimate MxSG">
+                <img src="pumki.png" alt="Бутсы Ultra 5 Ultimate MxSG">
                 <h3>Бутсы ULTRA 5 ULTIMATE MxSG Football Boots</h3>
                 <p>22 990₽</p>
             </div>
