--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="product-item">
                 <img src="pumki.png" alt="Бутсы Ultra 5 Ultimate MxSG">
-                <h3>Бутсы ULTRA 5 ULTIMATE MxSG Football Boots</h3>
+                <h3>Бутсы ULTRA 5 ULTIMATE MxSG</h3>
                 <p>22 990₽</p>
             </div>
             <div class="product-item">
