--- a/index.html
+++ b/index.html
@@ -34,41 +34,54 @@
         <section class="products">
             <h2>Хедлайнеры продаж</h2>
             <div class="product-container">
-                <!-- Продукт 1 -->
-                <a href="product1.html" class="product-item"> <!-- Добавляем ссылку -->
-                    <img src="Tiempo.jpg" alt="Бутсы Nike Tiempo Legend 9 Elite FG">
-                    <h3>Бутсы Nike Tiempo Legend 9 Elite FG</h3>
-                    <p><button class="price-button">43 990₽</button></p>
-                </a>
 
-                <!-- Продукт 2 -->
-                <a href="product2.html" class="product-item"> <!-- Добавляем ссылку -->
-                    <img src="pumki1.png" alt="Бутсы Ultra 5 Ultimate MxSG">
-                    <h3>Бутсы ULTRA 5 ULTIMATE MxSG Football Boots</h3>
-                    <p><button class="price-button">22 990₽</button></p>
-                </a>
+<!-- Продукт 1 -->
 
-                <!-- Продукт 3 -->
-                <a href="product3.html" class="product-item"> <!-- Добавляем ссылку -->
-                    <img src="Players Club T-short.png" alt="Футболка мужская Players Club">
-                    <h3>Футболка мужская "Players Club"</h3>
-                    <p><button class="price-button">3 990₽</button></p>
-                </a>
-            <div class="product-item">
-                <img src="Tiempo.jpg" alt="Бутсы Nike Tiempo Legend 9 Elite FG">
-                <h3>Бутсы Nike Tiempo Legend 9 Elite FG</h3>
+            <a href="product1.html" class="product-item">
+            <img src="Tiempo.jpg" alt="Бутсы Nike Tiempo Legend 9 Elite FG">
+            <h3>Бутсы Nike Tiempo Legend 9 Elite FG</h3>
+            <p>43 990₽</p>
+            </a>
+
+<!-- Продукт 2 -->
+
+            <a href="product2.html" class="product-item">
+            <img src="pumki1.png" alt="Бутсы Ultra 5 Ultimate MxSG">
+            <h3>Бутсы ULTRA 5 ULTIMATE MxSG Football Boots</h3>
+            <p>22 990₽</p>
+            </a>
+
+<!-- Продукт 3 -->
+
+            <a href="product3.html" class="product-item">
+            <img src="Players Club T-short.png" alt="Футболка мужская Players Club">
+            <h3>Футболка мужская "Players Club"</h3>
+            <p>3 990₽</p>
+            </a>
+
+<!-- Продукт 4 -->
+
+            <a href="product4.html" class="product-item">
+                <img src="Zenit-Hoodie 2.jpg" alt="Худи Zenit&PlayersClub">
+                <h3>Худи Zenit&PlayersClub</h3>
                 <p>43 990₽</p>
-            </div>
-            <div class="product-item">
-                <img src="pumki1.png" alt="Бутсы Ultra 5 Ultimate MxSG">
-                <h3>Бутсы ULTRA 5 ULTIMATE MxSG Football Boots</h3>
+            </a>
+
+<!-- Продукт 5 -->
+
+            <a href="product5.html" class="product-item">
+                <img src="Инвентарь.jpg" alt="Инвентарь для разминки и спецбеговых упражнений">
+                <h3>Инвентарь для разминки и спецбеговых упражнений</h3>
                 <p>22 990₽</p>
-            </div>
-            <div class="product-item">
-                <img src="Players Club T-short.png" alt="Футболка мужская Players Club">
-                <h3>Футболка мужская "Players Club"</h3>
+            </a>
+
+<!-- Продукт 6 -->
+
+            <a href="product6.html" class="product-item">
+                <img src="Suit 1.png" alt="Форма под заказ">
+                <h3>"Форма под заказ"</h3>
                 <p>3 990₽</p>
-            </div>
+            </a>
         </section>
     </main>
 
