--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <a href="product6.html" class="product-item">
                 <img src="Suit 1.png" alt="Форма под заказ">
-                <h3>"Форма под заказ"</h3>
+                <h3>Форма под заказ</h3>
                 <p>3 990₽</p>
             </a>
         </section>
@@ -110,3 +110,4 @@
     </footer>
 </body>
 </html>
+5
