--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <nav>
-            <button class="nav-button">Каталог</button>
+            <a href="catalog.html" class="nav-button">Каталог</a>
             <button class="nav-button">О Нас</button>
             <button class="nav-button">Акции</button>
         </nav>
