--- a/catalog.html
+++ b/catalog.html
@@ -32,19 +32,19 @@
             <h2>Наши товары</h2>
             <p class="catalog-description">Ознакомьтесь с нашим ассортиментом спортивной продукции, от футбольной экипировки до аксессуаров и инвентаря.</p>
             <div class="catalog-container">
-                <a href="#" class="catalog-item">
+                <a href="Football_Boots.html" class="catalog-item">
                     <img src="Leao.jpg" alt="Футбольные бутсы" class="product-img football-boots">
                     <button>Футбольные бутсы</button>
                 </a>
-                <a href="#" class="catalog-item">
+                <a href="Equipment.html" class="catalog-item">
                     <img src="photoset.jpg" alt="Экипировка" class="product-img outfit">
                     <button>Экипировка</button>
                 </a>
-                <a href="#" class="catalog-item">
+                <a href="Inventory.html" class="catalog-item">
                     <img src="Equipment 1.jpg" alt="Инвентарь" class="product-img inventory">
                     <button>Инвентарь</button>
                 </a>
-                <a href="#" class="catalog-item">
+                <a href="Acessories.html" class="catalog-item">
                     <img src="Аксессуары.jpg" alt="Аксессуары" class="product-img accessories">
                     <button>Аксессуары</button>
                 </a>                  
