--- a/product1.html
+++ b/product1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная страница</title>
+    <title>Бутсы Nike Tiempo Legend 9 Elite FG</title>
     <link rel="stylesheet" href="style52.css">
 </head>
 <body>
