--- a/product9.html
+++ b/product9.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puma Ultra 5 Ultimate MxSG Football Boots</title>
+    <title>Манишка сетчатая</title>
     <link rel="stylesheet" href="style52.css">
 </head>
 <body>
