--- a/Contacts.html
+++ b/Contacts.html
@@ -30,9 +30,20 @@
     </header>
 
     <!-- Основное содержимое страницы -->
-<main>
-
-</main>
+    <main style="background-color: #ffcccc;">
+        <section class="about-us" style="text-align: center; padding: 20px;">
+            <h1 style="font-size: 2rem; margin-bottom: 20px;">Players Shop</h1>
+            <h2 style="font-style: italic; margin-bottom: 20px;">Кто мы?</h2>
+            <div style="display: flex; justify-content: space-around; align-items: center; flex-wrap: wrap;">
+                <img src="" alt="Логотип 1" style="max-width: 300px; margin: 10px;">
+                <img src="" alt="Логотип 2" style="max-width: 300px; margin: 10px;">
+            </div>
+            <p style="margin-top: 20px; font-size: 1.2rem;">
+                Добро пожаловать в <strong>Players Shop</strong> — ваш надёжный источник футбольной экипировки и спортивных аксессуаров.
+                Мы гордимся сотрудничеством с ведущими брендами и предлагаем эксклюзивные товары для всех любителей спорта.
+            </p>
+        </section>
+    </main>
 <!-- Footer -->
 <footer>
     <div class="footer-content">
