--- a/About_Us.html
+++ b/About_Us.html
@@ -30,9 +30,24 @@
     </header>
 
     <!-- Основное содержимое страницы -->
-<main>
+    <main style="background-color: hotpink; padding: 20px;">
+        <h1 style="text-align: center; font-size: 2rem; margin-bottom: 10px;">Контакты</h1>
+        <div class="text-box">
+            <h2>Адрес</h2>
+            <p>г. Владимир, Пр-т строителей, д. 44Б</p>
+        </div>
+        <div class="text-box">
+            <h2>Информация для связи</h2>
+            <p>Email: <a href="mailto:info@playershop.ru">info@playershop.ru</a></p>
+            <p>Телефон: <a href="tel:+79005874570">+7 (900) 587-45-70</a></p>
+        </div>
 
-</main>
+        <!-- Карта -->
+        <div id="map-container" style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
+            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Afed38ce7fefa6a7a56f87b7bdfd686ef90bc165928a9381f13acc85ad07245f5&amp;width=840&amp;height=416&amp;lang=ru_RU&amp;scroll=true"></script>
+        </div>
+    </main>
+
 <!-- Footer -->
 <footer>
     <div class="footer-content">
