--- a/Contacts.html
+++ b/Contacts.html
@@ -29,21 +29,33 @@
         </nav>
     </header>
 
-    <!-- Основное содержимое страницы -->
-    <main style="background-color: #ffcccc;">
-        <section class="about-us" style="text-align: center; padding: 20px;">
-            <h1 style="font-size: 2rem; margin-bottom: 20px;">Players Shop</h1>
-            <h2 style="font-style: italic; margin-bottom: 20px;">Кто мы?</h2>
-            <div style="display: flex; justify-content: space-around; align-items: center; flex-wrap: wrap;">
-                <img src="" alt="Логотип 1" style="max-width: 300px; margin: 10px;">
-                <img src="" alt="Логотип 2" style="max-width: 300px; margin: 10px;">
-            </div>
-            <p style="margin-top: 20px; font-size: 1.2rem;">
-                Добро пожаловать в <strong>Players Shop</strong> — ваш надёжный источник футбольной экипировки и спортивных аксессуаров.
-                Мы гордимся сотрудничеством с ведущими брендами и предлагаем эксклюзивные товары для всех любителей спорта.
-            </p>
-        </section>
-    </main>
+   <!-- Основное содержимое страницы -->
+   <main style="background-color: hotpink; padding: 20px;">
+    <h1 style="text-align: center; font-size: 2rem; margin-bottom: 10px;">Players Shop</h1>
+    <h2 style="text-align: center; font-style: italic; margin-bottom: 20px;">Кто мы?</h2>
+    <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; margin-bottom: 20px;">
+        <img src="Whowe.png" alt="Логотип Зенит" style="max-width: 500px; height: auto;">
+        <img src="logo.png" alt="Логотип Players Shop" style="max-width: 700px; height: auto;">
+    </div>
+
+    <!-- Рамки для текста -->
+    <div class="text-box">
+        <p>
+            Добро пожаловать в <strong>Players Shop</strong> — ваш надёжный источник футбольной экипировки и спортивных аксессуаров.
+            Уже более 4 лет мы предлагаем широкий выбор качественной продукции для всех, кто ценит европейское качество и доступные цены.
+            Наша цель — поддерживать каждого спортсмена, будь то профессионал или любитель, с помощью тщательно подобранного ассортимента.
+        </p>
+    </div>
+    <div class="text-box">
+        <p>
+            Мы гордимся сотрудничеством с одним из ведущих футбольных клубов России — <strong>ФК "Зенит"</strong>.
+            Благодаря этому партнёрству наши покупатели могут найти эксклюзивную коллекцию атрибутики и аксессуаров, созданных специально для фанатов и поклонников клуба.
+            <br><br>
+            <strong>Players Shop</strong> — это больше, чем магазин. Это место, где объединяются страсть к футболу, стиль и функциональность.
+        </p>
+    </div>
+</main>
+
 <!-- Footer -->
 <footer>
     <div class="footer-content">
