--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <nav>
             <a href="catalog.html" class="nav-button">Каталог</a>
-            <a href="About_Us.html" class="nav-button">О Нас</a>
+            <a href="About us.html" class="nav-button">О Нас</a>
             <a href="Promotions.html" class="nav-button">Акции</a>
         </nav>
     </header>
@@ -91,7 +91,9 @@
             <div class="map-button-container">
                 <div class="map-content">
                     <img src="place.png" alt="Местоположение" class="location-icon">
-                    <button class="map-button">Где нас найти?</button>
+                    <a href="Contacts.html">
+                        <button class="map-button">Где нас найти?</button>
+                    </a>
                 </div>
             </div>
             <div class="footer-logo">
