--- a/About us.html
+++ b/About us.html
@@ -24,8 +24,8 @@
         </div>
         <nav>
             <a href="catalog.html" class="nav-button">Каталог</a>
-            <button class="nav-button">О Нас</button>
-            <button class="nav-button">Акции</button>
+            <a href="index.html" class="nav-button">Главная</a>
+            <a href="Promotions.html" class="nav-button">Акции</a>
         </nav>
     </header>
 
