--- a/catalog.html
+++ b/catalog.html
@@ -23,9 +23,10 @@
             </div>
         </div>
         <nav>
-            <button class="nav-button">Каталог</button>
-            <button class="nav-button">О Нас</button>
-            <button class="nav-button">Акции</button>
+            <a href="index.html" class="nav-button">Главная</a>
+            <a href="About us.html" class="nav-button">О Нас</a>
+            <a href="Promotions.html" class="nav-button">Акции</a>
+        </nav>
     </header>
     <main>
         <section class="products">
@@ -57,7 +58,9 @@
             <div class="map-button-container">
                 <div class="map-content">
                     <img src="place.png" alt="Местоположение" class="location-icon">
-                    <button class="map-button">Где нас найти?</button>
+                    <a href="Contacts.html">
+                        <button class="map-button">Где нас найти?</button>
+                    </a>
                 </div>
             </div>
             <div class="footer-logo">
