--- a/Promotions.html
+++ b/Promotions.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная страница</title>
+    <title>Акции</title>
     <link rel="stylesheet" href="style52.css">
 </head>
 <body>
@@ -17,29 +17,62 @@
                 </div>
                 <img src="ring.jpg" alt="Логотип" class="foreground-logo">
                 <div class="right-group">
-                    <button class="contact-button">Контакты</button>
+                    <a href="Contacts.html">
+                        <button class="contact-button">Контакты</button>
+                    </a>
+                    <a href="Promocodes.html">
                     <button class="promo-button">Промокоды</button>
+                    </a>
                 </div>
             </div>
         </div>
         <nav>
             <a href="catalog.html" class="nav-button">Каталог</a>
-            <button class="nav-button">О Нас</button>
-            <button class="nav-button">Акции</button>
+            <a href="About us.html" class="nav-button">О Нас</a>
+            <a href="Index.html" class="nav-button">Главная</a>
         </nav>
     </header>
+    <main>
+        <div class="promotion black-friday">
+            <h1 class="black-friday-title">Товары Чёрной Пятницы</h1>
+            
+            <div class="black-friday-product">
+                <a href="product1.html" class="product-link">
+                    <img src="Zenit-Hoodie 1.jpg" alt="Zenit-Hoodie" class="product-image">
+                    <h2>Zenit-Hoodie</h2>
+                    <button class="price-btn">Цена: 1000 руб.</button>
+                </a>
+                <p>Артикул: 123456</p>
+            </div>
 
-    <!-- Основное содержимое страницы -->
-<main>
+            <div class="black-friday-product">
+                <a href="product2.html" class="product-link">
+                    <img src="Players Club T-short.png" alt="Players Club T-shirt" class="product-image">
+                    <h2>Players Club T-shirt</h2>
+                    <button class="price-btn">Цена: 1200 руб.</button>
+                </a>
+                <p>Артикул: 789101</p>
+            </div>
 
-</main>
+            <div class="black-friday-product">
+                <a href="product3.html" class="product-link">
+                    <img src="Longsliv.png" alt="Лонгслив PlayersClub" class="product-image">
+                    <h2>Лонгслив PlayersClub</h2>
+                    <button class="price-btn">Цена: 1500 руб.</button>
+                </a>
+                <p>Артикул: 112233</p>
+            </div>
+        </div>
+    </main>
 <!-- Footer -->
 <footer>
     <div class="footer-content">
         <div class="map-button-container">
             <div class="map-content">
                 <img src="place.png" alt="Местоположение" class="location-icon">
+                <a href="Contacts.html">
                 <button class="map-button">Где нас найти?</button>
+                </a>
             </div>
         </div>
         <div class="footer-logo">
