--- a/catalog.html
+++ b/catalog.html
@@ -33,19 +33,20 @@
             <h2>Наши товары</h2>
             <p class="catalog-description">Ознакомьтесь с нашим ассортиментом спортивной продукции, от футбольной экипировки до аксессуаров и инвентаря.</p>
             <div class="catalog-container">
-                <a href="Football_Boots.html" class="catalog-item">
+                <!-- Ссылка на try.html с параметром категории -->
+                <a href="try.html?category=boots" class="catalog-item">
                     <img src="Leao.jpg" alt="Футбольные бутсы" class="product-img football-boots">
                     <button>Футбольные бутсы</button>
                 </a>
-                <a href="Equipment.html" class="catalog-item">
+                <a href="try.html?category=clothing" class="catalog-item">
                     <img src="photoset.jpg" alt="Экипировка" class="product-img outfit">
                     <button>Экипировка</button>
                 </a>
-                <a href="Inventory.html" class="catalog-item">
+                <a href="try.html?category=inventory" class="catalog-item">
                     <img src="Equipment 1.jpg" alt="Инвентарь" class="product-img inventory">
                     <button>Инвентарь</button>
                 </a>
-                <a href="Acessories.html" class="catalog-item">
+                <a href="try.html?category=accessories" class="catalog-item">
                     <img src="Аксессуары.jpg" alt="Аксессуары" class="product-img accessories">
                     <button>Аксессуары</button>
                 </a>                  
