--- a/product7.html
+++ b/product7.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Форма под заказ 2</title>
+    <title>Бутсы Nike Tiempo Legend 9 Elite FG</title>
     <link rel="stylesheet" href="style52.css">
+    <link rel="stylesheet" href="products.css">
 </head>
 <body>
     <header>
@@ -23,13 +24,76 @@
             </div>
         </div>
         <nav>
-            <button class="nav-button">Каталог</button>
-            <button class="nav-button">О Нас</button>
-            <button class="nav-button">Акции</button>
+            <a href="catalog.html" class="nav-button">Каталог</a>
+            <a href="About us.html" class="nav-button">О Нас</a>
+            <a href="Promotions.html" class="nav-button">Акции</a>
         </nav>
     </header>
 <main>
+<!-- Заголовок страницы товара -->
+<h2>NIKE LEGEND 9 ELITE FG CZ8482-176</h2>
 
+<!-- Описание товара -->
+<div class="product-description">
+    <p>Nike Tiempo Legend 9 Elite FG — одна из самых легких на сегодняшний день моделей линейки Tiempo. Эти бутсы позволяют перейти в наступление благодаря низкопрофильной конструкции, адаптированной для нападающих.Верх с рельефной текстурой дополнен мягкими подушечками из пеноматериала для точного дриблинга, передач и бросков, а шипы на подошве обеспечивают сцепление для быстрых маневров и резких остановок.</p>
+    <br>
+    <p>Обновленная накладка и усовершенствованный верх не создают лишнего объема для эффективной игры.</p>
+    <br>
+    <p>Верх из первоклассной кожи кенгуру и вставки из мягкого пеноматериала позволяют выполнять точные удары.</p>
+    <br>
+    <p>Амортизирующая стелька и гибкий язычок из сетки обеспечивают комфорт.</p>
+</div>
+
+<!-- Картинка товара -->
+<div class="image-container">
+    <img src="NIke Tiempo 2.png" alt="Image 1" class="product-img">
+    <img src="Nike Tiempo 1.png" alt="Image 2" class="product-img">
+    <img src="Nike Tiempo 3.png" alt="Image 3" class="product-img">
+</div>
+<!-- Артикул и цена товара -->
+<div class="product-details">
+    <p class="product-article">Артикул: 12345</p>
+</div>
+
+<!-- Кнопка "Купить" -->
+<button class="price-btn">Купить: 7500 руб.</button>
+
+<!-- Секция "Смотрите также" -->
+<div class="see-also">
+    <h3>Смотрите также</h3>
+
+    <div class="catalog-container">
+        <!-- Товар 1 в секции "Смотрите также" -->
+        <div class="catalog-item">
+            <a href="product1.html" class="product-link">
+                <img src="pumki1.png" alt="Футбольные бутсы" class="product-img">
+                <h3>Футбольные бутсы Adidas Predator</h3>
+            </a>
+            <p class="product-article">Артикул: 12345</p>
+            <p class="product-price">7500 руб.</p>
+        </div>
+
+        <!-- Товар 2 в секции "Смотрите также" -->
+        <div class="catalog-item">
+            <a href="product2.html" class="product-link">
+                <img src="photoset.jpg" alt="Экипировка" class="product-img">
+                <h3>Футболка Nike</h3>
+            </a>
+            <p class="product-article">Артикул: 67890</p>
+            <p class="product-price">3500 руб.</p>
+        </div>
+
+        <!-- Товар 3 в секции "Смотрите также" -->
+        <div class="catalog-item">
+            <a href="product3.html" class="product-link">
+                <img src="Equipment 1.jpg" alt="Инвентарь" class="product-img">
+                <h3>Конусы тренировочные</h3>
+            </a>
+            <p class="product-article">Артикул: 11223</p>
+            <p class="product-price">2000 руб.</p>
+        </div>
+    </div>
+</div>
 </main>
 <!-- Footer -->
 <footer>
@@ -37,7 +101,9 @@
         <div class="map-button-container">
             <div class="map-content">
                 <img src="place.png" alt="Местоположение" class="location-icon">
+                <a href="Contacts.html">
                 <button class="map-button">Где нас найти?</button>
+                </a>
             </div>
         </div>
         <div class="footer-logo">
