--- a/try.html
+++ b/try.html
@@ -36,34 +36,34 @@
     <!-- Футбольные бутсы -->
     <div class="catalog-item boots">
         <a href="product1.html" class="product-link">
-            <img src="Leao.jpg" alt="Футбольные бутсы" class="product-img football-boots">
-            <h2>Футбольные бутсы Adidas Predator</h2>
+            <img src="NIke Tiempo 1.png" alt="Футбольные бутсы" class="product-img football-boots">
+            <h2>NIKE LEGEND 9 ELITE FG CZ8482-176</h2>
         </a>
         <p class="product-article">Артикул: 12345</p> <!-- Применяется тот же стиль для артикула -->
         <p>Цена: 7500 руб.</p>
     </div>
 
     <div class="catalog-item boots">
-        <a href="product1.html" class="product-link">
-            <img src="Leao.jpg" alt="Футбольные бутсы" class="product-img football-boots">
-            <h2>Футбольные бутсы Adidas Predator</h2>
+        <a href="product2.html" class="product-link">
+            <img src="Longsliv.png" alt="Футбольные бутсы" class="product-img football-boots">
+            <h2>Лонгслив PlayersClub</h2>
         </a>
         <p class="product-article">Артикул: 12345</p> <!-- Применяется тот же стиль для артикула -->
-        <p>Цена: 7500 руб.</p>
+        <p>Цена: 1500 руб.</p>
     </div>
 
     <div class="catalog-item boots">
-        <a href="product1.html" class="product-link">
-            <img src="Leao.jpg" alt="Футбольные бутсы" class="product-img football-boots">
-            <h2>Футбольные бутсы Adidas Predator</h2>
+        <a href="product3.html" class="product-link">
+            <img src="Zenit-Hoodie 1.jpg" alt="Футбольные бутсы" class="product-img football-boots">
+            <h2>Худи Zenit&PlayersClub</h2>
         </a>
         <p class="product-article">Артикул: 12345</p> <!-- Применяется тот же стиль для артикула -->
-        <p>Цена: 7500 руб.</p>
+        <p>Цена: 12900 руб.</p>
     </div>
 
     <!-- Экипировка -->
     <div class="catalog-item clothing">
-        <a href="product2.html" class="product-link">
+        <a href="product4.html" class="product-link">
             <img src="photoset.jpg" alt="Экипировка" class="product-img outfit">
             <h2>Футболка Nike</h2>
         </a>
@@ -72,7 +72,7 @@
     </div>
 
     <div class="catalog-item clothing">
-        <a href="product2.html" class="product-link">
+        <a href="product5.html" class="product-link">
             <img src="photoset.jpg" alt="Экипировка" class="product-img outfit">
             <h2>Футболка Nike</h2>
         </a>
@@ -81,7 +81,7 @@
     </div>
 
     <div class="catalog-item clothing">
-        <a href="product2.html" class="product-link">
+        <a href="product6.html" class="product-link">
             <img src="photoset.jpg" alt="Экипировка" class="product-img outfit">
             <h2>Футболка Nike</h2>
         </a>
@@ -91,7 +91,7 @@
 
     <!-- Инвентарь -->
     <div class="catalog-item inventory">
-        <a href="product3.html" class="product-link">
+        <a href="product7.html" class="product-link">
             <img src="Equipment 1.jpg" alt="Инвентарь" class="product-img inventory">
             <h2>Конусы тренировочные</h2>
         </a>
@@ -100,7 +100,7 @@
     </div>
 
     <div class="catalog-item inventory">
-        <a href="product3.html" class="product-link">
+        <a href="product8.html" class="product-link">
             <img src="Equipment 1.jpg" alt="Инвентарь" class="product-img inventory">
             <h2>Конусы тренировочные</h2>
         </a>
@@ -109,7 +109,7 @@
     </div>
 
     <div class="catalog-item inventory">
-        <a href="product3.html" class="product-link">
+        <a href="product9.html" class="product-link">
             <img src="Equipment 1.jpg" alt="Инвентарь" class="product-img inventory">
             <h2>Конусы тренировочные</h2>
         </a>
@@ -119,7 +119,7 @@
 
     <!-- Аксессуары -->
     <div class="catalog-item accessories">
-        <a href="product4.html" class="product-link">
+        <a href="product10.html" class="product-link">
             <img src="Аксессуары.jpg" alt="Аксессуары" class="product-img accessories">
             <h2>Скакалка Nike</h2>
         </a>
@@ -128,7 +128,7 @@
     </div>
 
     <div class="catalog-item accessories">
-        <a href="product4.html" class="product-link">
+        <a href="product11.html" class="product-link">
             <img src="Аксессуары.jpg" alt="Аксессуары" class="product-img accessories">
             <h2>Скакалка Nike</h2>
         </a>
@@ -137,7 +137,7 @@
     </div>
 
     <div class="catalog-item accessories">
-        <a href="product4.html" class="product-link">
+        <a href="product12.html" class="product-link">
             <img src="Аксессуары.jpg" alt="Аксессуары" class="product-img accessories">
             <h2>Скакалка Nike</h2>
         </a>
