--- a/product11.html
+++ b/product11.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Бутсы Nike Tiempo Legend 9 Elite FG</title>
+    <title>Сменка Nike mercurial</title>
     <link rel="stylesheet" href="style52.css">
     <link rel="stylesheet" href="products.css">
 </head>
@@ -31,17 +31,17 @@
     </header>
 <main>
 <!-- Заголовок страницы товара -->
-<h2>NIKE LEGEND 9 ELITE FG CZ8482-176</h2>
+<h2>Сменка Nike mercurial</h2>
 
 <!-- Описание товара -->
 <div class="product-description">
-    <p>Nike Tiempo Legend 9 Elite FG — одна из самых легких на сегодняшний день моделей линейки Tiempo. Эти бутсы позволяют перейти в наступление благодаря низкопрофильной конструкции, адаптированной для нападающих.Верх с рельефной текстурой дополнен мягкими подушечками из пеноматериала для точного дриблинга, передач и бросков, а шипы на подошве обеспечивают сцепление для быстрых маневров и резких остановок.</p>
+    <p>Сменка Nike Mercurial — это идеальное сочетание лёгкости, комфорта и скорости для игроков, стремящихся к максимальной производительности на поле.</p>
     <br>
-    <p>Обновленная накладка и усовершенствованный верх не создают лишнего объема для эффективной игры.</p>
+    <p>Обновлённый дизайн и технологичные материалы обеспечивают отличное сцепление, устойчивость и поддержку при каждом шаге.</p>
     <br>
-    <p>Верх из первоклассной кожи кенгуру и вставки из мягкого пеноматериала позволяют выполнять точные удары.</p>
+    <p>Лёгкая и прочная конструкция подходит для интенсивных тренировок и матчей, а эластичная верхняя часть и инновационная подошва делают каждое движение быстрым и точным.</p>
     <br>
-    <p>Амортизирующая стелька и гибкий язычок из сетки обеспечивают комфорт.</p>
+    <p>Nike Mercurial — для тех, кто хочет быть быстрее, точнее и увереннее в каждом моменте игры.</p>
 </div>
 
 <!-- Картинка товара -->
