--- a/product4.html
+++ b/product4.html
@@ -31,24 +31,20 @@
     </header>
 <main>
 <!-- Заголовок страницы товара -->
-<h2>NIKE LEGEND 9 ELITE FG CZ8482-176</h2>
+<h2>Манишка сетчатая оранжевая</h2>
 
 <!-- Описание товара -->
 <div class="product-description">
-    <p>Nike Tiempo Legend 9 Elite FG — одна из самых легких на сегодняшний день моделей линейки Tiempo. Эти бутсы позволяют перейти в наступление благодаря низкопрофильной конструкции, адаптированной для нападающих.Верх с рельефной текстурой дополнен мягкими подушечками из пеноматериала для точного дриблинга, передач и бросков, а шипы на подошве обеспечивают сцепление для быстрых маневров и резких остановок.</p>
+    <p>Оранжевая сетчатая манишка — идеальный аксессуар для тренировки и матчей.</p>
     <br>
-    <p>Обновленная накладка и усовершенствованный верх не создают лишнего объема для эффективной игры.</p>
+    <p>Легкая и дышащая, она обеспечивает отличную вентиляцию и комфорт.</p>
     <br>
-    <p>Верх из первоклассной кожи кенгуру и вставки из мягкого пеноматериала позволяют выполнять точные удары.</p>
-    <br>
-    <p>Амортизирующая стелька и гибкий язычок из сетки обеспечивают комфорт.</p>
+    <p>Прочная ткань и яркий цвет делают её заметной на поле.</p>
 </div>
 
 <!-- Картинка товара -->
 <div class="image-container">
-    <img src="NIke Tiempo 2.png" alt="Image 1" class="product-img">
-    <img src="Nike Tiempo 1.png" alt="Image 2" class="product-img">
-    <img src="Nike Tiempo 3.png" alt="Image 3" class="product-img">
+    <img src="orig.png" alt="Image 1" class="product-img">
 </div>
 <!-- Артикул и цена товара -->
 <div class="product-details">
