--- a/product9.html
+++ b/product9.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Бутсы Nike Tiempo Legend 9 Elite FG</title>
+    <title>Набор конусов 10 штук</title>
     <link rel="stylesheet" href="style52.css">
     <link rel="stylesheet" href="products.css">
 </head>
@@ -31,24 +31,22 @@
     </header>
 <main>
 <!-- Заголовок страницы товара -->
-<h2>NIKE LEGEND 9 ELITE FG CZ8482-176</h2>
+<h2>Набор конусов 10 штук</h2>
 
 <!-- Описание товара -->
 <div class="product-description">
-    <p>Nike Tiempo Legend 9 Elite FG — одна из самых легких на сегодняшний день моделей линейки Tiempo. Эти бутсы позволяют перейти в наступление благодаря низкопрофильной конструкции, адаптированной для нападающих.Верх с рельефной текстурой дополнен мягкими подушечками из пеноматериала для точного дриблинга, передач и бросков, а шипы на подошве обеспечивают сцепление для быстрых маневров и резких остановок.</p>
+    <p>Футбольные конусы — универсальный тренировочный инвентарь для разметки поля и отработки техник.</p>
     <br>
-    <p>Обновленная накладка и усовершенствованный верх не создают лишнего объема для эффективной игры.</p>
+    <p>Изготовлены из прочного пластика, устойчивого к износу и погодным условиям.</p>
     <br>
-    <p>Верх из первоклассной кожи кенгуру и вставки из мягкого пеноматериала позволяют выполнять точные удары.</p>
-    <br>
-    <p>Амортизирующая стелька и гибкий язычок из сетки обеспечивают комфорт.</p>
+    <p>Яркие цвета обеспечивают хорошую видимость, а различные размеры позволяют использовать их для тренировки дриблинга, маневрирования и скоростных упражнений.</p>
 </div>
 
 <!-- Картинка товара -->
 <div class="image-container">
-    <img src="NIke Tiempo 2.png" alt="Image 1" class="product-img">
-    <img src="Nike Tiempo 1.png" alt="Image 2" class="product-img">
-    <img src="Nike Tiempo 3.png" alt="Image 3" class="product-img">
+    <img src="cones1.png" alt="Image 1" class="product-img">
+    <img src="cones2.png" alt="Image 2" class="product-img">
+    <img src="cones3.png" alt="Image 3" class="product-img">
 </div>
 <!-- Артикул и цена товара -->
 <div class="product-details">
