--- a/try.html
+++ b/try.html
@@ -45,8 +45,8 @@
 
     <div class="catalog-item boots">
         <a href="product2.html" class="product-link">
-            <img src="Longsliv.png" alt="Футбольные бутсы" class="product-img football-boots">
-            <h2>Лонгслив PlayersClub</h2>
+            <img src="pumki2.jpg" alt="Футбольные бутсы" class="product-img football-boots">
+            <h2>ULTRA 5 ULTIMATE MxSG Football Boots</h2>
         </a>
         <p class="product-article">Артикул: 12345</p> <!-- Применяется тот же стиль для артикула -->
         <p>Цена: 1500 руб.</p>
@@ -54,8 +54,8 @@
 
     <div class="catalog-item boots">
         <a href="product3.html" class="product-link">
-            <img src="Zenit-Hoodie 1.jpg" alt="Футбольные бутсы" class="product-img football-boots">
-            <h2>Худи Zenit&PlayersClub</h2>
+            <img src="mizuno1.jpg" alt="Футбольные бутсы" class="product-img football-boots">
+            <h2>Mizuno Morelia Neo Beta Japan FG</h2>
         </a>
         <p class="product-article">Артикул: 12345</p> <!-- Применяется тот же стиль для артикула -->
         <p>Цена: 12900 руб.</p>
@@ -64,8 +64,8 @@
     <!-- Экипировка -->
     <div class="catalog-item clothing">
         <a href="product4.html" class="product-link">
-            <img src="photoset.jpg" alt="Экипировка" class="product-img outfit">
-            <h2>Футболка Nike</h2>
+            <img src="orig.png" alt="Экипировка" class="product-img outfit">
+            <h2>Манишка сетчатая оранжевая</h2>
         </a>
         <p class="product-article">Артикул: 67890</p> <!-- Применяется тот же стиль для артикула -->
         <p>Цена: 3500 руб.</p>
@@ -73,8 +73,8 @@
 
     <div class="catalog-item clothing">
         <a href="product5.html" class="product-link">
-            <img src="photoset.jpg" alt="Экипировка" class="product-img outfit">
-            <h2>Футболка Nike</h2>
+            <img src="Манижки.png" alt="Экипировка" class="product-img outfit">
+            <h2>Манишка двусторонняя синяя-зелёная</h2>
         </a>
         <p class="product-article">Артикул: 67890</p> <!-- Применяется тот же стиль для артикула -->
         <p>Цена: 3500 руб.</p>
@@ -82,8 +82,8 @@
 
     <div class="catalog-item clothing">
         <a href="product6.html" class="product-link">
-            <img src="photoset.jpg" alt="Экипировка" class="product-img outfit">
-            <h2>Футболка Nike</h2>
+            <img src="gaiters.png" alt="Экипировка" class="product-img outfit">
+            <h2>Гетры спортивные JOGEL чёрные</h2>
         </a>
         <p class="product-article">Артикул: 67890</p> <!-- Применяется тот же стиль для артикула -->
         <p>Цена: 3500 руб.</p>
@@ -92,8 +92,8 @@
     <!-- Инвентарь -->
     <div class="catalog-item inventory">
         <a href="product7.html" class="product-link">
-            <img src="Equipment 1.jpg" alt="Инвентарь" class="product-img inventory">
-            <h2>Конусы тренировочные</h2>
+            <img src="RIdFFsXyzeV.jpg" alt="Инвентарь" class="product-img inventory">
+            <h2>Лестница координационная</h2>
         </a>
         <p class="product-article">Артикул: 11223</p> <!-- Применяется тот же стиль для артикула -->
         <p>Цена: 2000 руб.</p>
@@ -101,8 +101,8 @@
 
     <div class="catalog-item inventory">
         <a href="product8.html" class="product-link">
-            <img src="Equipment 1.jpg" alt="Инвентарь" class="product-img inventory">
-            <h2>Конусы тренировочные</h2>
+            <img src="stenka2.png" alt="Инвентарь" class="product-img inventory">
+            <h2>Стенка тренировочная из полиуретана</h2>
         </a>
         <p class="product-article">Артикул: 11223</p> <!-- Применяется тот же стиль для артикула -->
         <p>Цена: 2000 руб.</p>
@@ -110,8 +110,8 @@
 
     <div class="catalog-item inventory">
         <a href="product9.html" class="product-link">
-            <img src="Equipment 1.jpg" alt="Инвентарь" class="product-img inventory">
-            <h2>Конусы тренировочные</h2>
+            <img src="cones3.png" alt="Инвентарь" class="product-img inventory">
+            <h2>Набор конусов 10 штук</h2>
         </a>
         <p class="product-article">Артикул: 11223</p> <!-- Применяется тот же стиль для артикула -->
         <p>Цена: 2000 руб.</p>
@@ -120,8 +120,8 @@
     <!-- Аксессуары -->
     <div class="catalog-item accessories">
         <a href="product10.html" class="product-link">
-            <img src="Аксессуары.jpg" alt="Аксессуары" class="product-img accessories">
-            <h2>Скакалка Nike</h2>
+            <img src="Zenit-Hoodie 1.jpg" alt="Аксессуары" class="product-img accessories">
+            <h2>Худи Zenit&PlayersClub</h2>
         </a>
         <p class="product-article">Артикул: 44556</p> <!-- Применяется тот же стиль для артикула -->
         <p>Цена: 1500 руб.</p>
@@ -129,8 +129,8 @@
 
     <div class="catalog-item accessories">
         <a href="product11.html" class="product-link">
-            <img src="Аксессуары.jpg" alt="Аксессуары" class="product-img accessories">
-            <h2>Скакалка Nike</h2>
+            <img src="Сменка Nike mercurial.png" alt="Аксессуары" class="product-img accessories">
+            <h2>Сменка Nike mercurial</h2>
         </a>
         <p class="product-article">Артикул: 44556</p> <!-- Применяется тот же стиль для артикула -->
         <p>Цена: 1500 руб.</p>
@@ -138,8 +138,8 @@
 
     <div class="catalog-item accessories">
         <a href="product12.html" class="product-link">
-            <img src="Аксессуары.jpg" alt="Аксессуары" class="product-img accessories">
-            <h2>Скакалка Nike</h2>
+            <img src="Players Club T-short.png" alt="Аксессуары" class="product-img accessories">
+            <h2>"Players Club T-short</h2>
         </a>
         <p class="product-article">Артикул: 44556</p> <!-- Применяется тот же стиль для артикула -->
         <p>Цена: 1500 руб.</p>
