--- a/product10.html
+++ b/product10.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Бутсы Nike Tiempo Legend 9 Elite FG</title>
+    <title>Худи Zenit&PlayersClub</title>
     <link rel="stylesheet" href="style52.css">
     <link rel="stylesheet" href="products.css">
 </head>
@@ -31,17 +31,15 @@
     </header>
 <main>
 <!-- Заголовок страницы товара -->
-<h2>NIKE LEGEND 9 ELITE FG CZ8482-176</h2>
+<h2>Худи Zenit&PlayersClub</h2>
 
 <!-- Описание товара -->
 <div class="product-description">
-    <p>Nike Tiempo Legend 9 Elite FG — одна из самых легких на сегодняшний день моделей линейки Tiempo. Эти бутсы позволяют перейти в наступление благодаря низкопрофильной конструкции, адаптированной для нападающих.Верх с рельефной текстурой дополнен мягкими подушечками из пеноматериала для точного дриблинга, передач и бросков, а шипы на подошве обеспечивают сцепление для быстрых маневров и резких остановок.</p>
+    <p>Худи Zenit & PlayersClub — стильный и комфортный элемент спортивной одежды для настоящих фанатов.</p>
     <br>
-    <p>Обновленная накладка и усовершенствованный верх не создают лишнего объема для эффективной игры.</p>
+    <p> Дизайн с логотипом «Зенит» и уникальными акцентами от PlayersClub идеально сочетает стиль и функциональность, идеально подходя для повседневной носки и активного отдыха.</p>
     <br>
-    <p>Верх из первоклассной кожи кенгуру и вставки из мягкого пеноматериала позволяют выполнять точные удары.</p>
-    <br>
-    <p>Амортизирующая стелька и гибкий язычок из сетки обеспечивают комфорт.</p>
+    <p>Прекрасный выбор для поклонников клуба, ценящих качество и атмосферу спортивной культуры.</p>
 </div>
 
 <!-- Картинка товара -->
