--- a/product11.html
+++ b/product11.html
@@ -35,20 +35,18 @@
 
 <!-- Описание товара -->
 <div class="product-description">
-    <p>Сменка Nike Mercurial — это идеальное сочетание лёгкости, комфорта и скорости для игроков, стремящихся к максимальной производительности на поле.</p>
+    <p>Сменка Nike Mercurial — удобный и компактный аксессуар для хранения и транспортировки спортивной обуви.</p>
     <br>
-    <p>Обновлённый дизайн и технологичные материалы обеспечивают отличное сцепление, устойчивость и поддержку при каждом шаге.</p>
+    <p>Изготовлен из прочного и лёгкого материала, который защищает ваши бутсы от повреждений и загрязнений.</p>
     <br>
-    <p>Лёгкая и прочная конструкция подходит для интенсивных тренировок и матчей, а эластичная верхняя часть и инновационная подошва делают каждое движение быстрым и точным.</p>
+    <p>Особый дизайн с логотипом Nike Mercurial придаёт мешку стильный и спортивный вид.</p>
     <br>
-    <p>Nike Mercurial — для тех, кто хочет быть быстрее, точнее и увереннее в каждом моменте игры.</p>
+    <p>Внутренний карман и затяжка обеспечивают надёжное закрытие, а компактные размеры позволяют удобно носить мешок в сумке или рюкзаке. Идеальный выбор для спортсменов, ценящих удобство и порядок.</p>
 </div>
 
 <!-- Картинка товара -->
 <div class="image-container">
-    <img src="NIke Tiempo 2.png" alt="Image 1" class="product-img">
-    <img src="Nike Tiempo 1.png" alt="Image 2" class="product-img">
-    <img src="Nike Tiempo 3.png" alt="Image 3" class="product-img">
+    <img src="Сменка Nike mercurial.png" alt="Image 1" class="product-img">
 </div>
 <!-- Артикул и цена товара -->
 <div class="product-details">
