--- a/product10.html
+++ b/product10.html
@@ -44,9 +44,8 @@
 
 <!-- Картинка товара -->
 <div class="image-container">
-    <img src="NIke Tiempo 2.png" alt="Image 1" class="product-img">
-    <img src="Nike Tiempo 1.png" alt="Image 2" class="product-img">
-    <img src="Nike Tiempo 3.png" alt="Image 3" class="product-img">
+    <img src="Zenit-Hoodie 1.jpg" alt="Image 1" class="product-img">
+    <img src="Zenit-Hoodie 2.jpg" alt="Image 2" class="product-img">
 </div>
 <!-- Артикул и цена товара -->
 <div class="product-details">
